test/errhandling/parallel/convenience.good
before coforall block
contains MyError? true
iterating MyError:
1
1
iterating everything else:
Error: other error
  convenience.chpl:12: thrown here
